--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -339,4 +339,89 @@
 }
 
 
+//我的评论
+.cen-right-down .comment-head
+{
+    min-height: 45px;
+    color: @color5;
+    padding: 10px 0px;
+    margin:0px 10px;
+    border-bottom:1px solid @color14 ;
+}
+
+.cen-right-down .comment-head .grade
+{
+    float: right;
+    margin-right: 30px;
+}
+.comment-head .grade label
+{
+    color: @color12;
+    font-size: 16px;
+    font-weight: normal;
+    margin-right: 7px;
+}
+
+.cen-right-down .my-comment
+{
+    float: left;
+    height: 25px;
+    line-height: 25px;
+    border-right: 1px solid @color5;
+    width: 100px;
+    text-align: center;
+    font-size: 18px;
+}
+.cen-right-down .comment-list
+{
+    border-bottom:1px dashed @color14 ;
+}
+.cen-right-down .comType
+{
+    float: left;
+    margin-left: 10px;
+}
+.cen-right-down .comType span{
+    margin:0 5px;
+    cursor: pointer;
+}
+.cen-right-down .cur-state
+{
+    color: #EC80AF;
+}
+.com-list .resource-title
+{
+    display: block;
+    margin-left: 0px;
+    height: 30px;
+    line-height: 30px;
+   
+}
+.com-list li{
+    min-height: 120px !important;
+    height: auto;
+    line-height: 25px !important;
+    padding:10px 0px;
+}
+.com-list .person-thumb
+{
+    width: 100%;
+}
+.com-list .com-content
+{
+    line-height: 22px;
+}
+.com-list .name{
+    color: @color5;
+}
+.com-list .btn{
+    background: @color5;
+    height: 28px;
+    line-height:12px;
+    float: right;
+}
+.com-list .edit
+{
+    clear: both;
+}
 
