--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -396,4 +396,16 @@
     margin: 0 auto;
 }
 
+.set-per-page {
+    font-size: 1.3rem;
+    font-style: normal;
+    padding-left: 30px;
+    i {
+        font-style: normal;
+    }
+    span {
+        margin-left: 0;
+    }
+}
+
 
