--- a/src/coms/personal-center/views/my-prepare.html
+++ b/src/coms/personal-center/views/my-prepare.html
@@ -37,12 +37,12 @@
 			</ul>
 		</div>
 		<div class="set-per-page">
-			<span class="res-text-total"><i>共</i><i>{{bigTotalItems}}条，</span>
+			<span class="res-text-total"><i>共</i><i>{{totalItems}}</i><i>条，</i></span>
 				<span class="res-text-perpage"> 每页显示<input type="text" ng-model="VM.perPage" ng-blur="changPerPage()"/>条</span>
 		</div>
 		<div class="pagination-box">
 			<div class="coms-pagination">
-			 	<uib-pagination total-items="totalItems"  ng-model="VM.currentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="perPage" ng-change="pageChanged()"></uib-pagination>
+			 	<uib-pagination total-items="totalItems"  ng-model="VM.currentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="VM.perPage" ng-change="pageChanged()"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
 					<input class="page-input" ng-model="pageTo"/>
