--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -157,6 +157,22 @@
     color: #219B81;
 }
 
+.type-select-box  {
+    .menu-drop .trigger {
+         margin-top: 0;
+        border: 1px solid #219B81;
+    }
+
+    .menu-drop .menu-drop-main {
+        width: 100%;
+    }
+   
+}
+
+
+
+
+/*
 .type-select-box select {
     width: 160px;
     height: 30px;
@@ -169,7 +185,7 @@
     height: 25px;
     padding: 5px 10px;
 }
-
+*/
 .box-title {
     height: 50px;
     line-height: 50px;
@@ -192,41 +208,50 @@
     margin: 0;
 }
 
+
 .resource-list ul {
     padding-left: 0px;
     
 }
 
 .resource-list li {
-    height: 100px;
+    height: 150px;
     line-height: 100px;
     font-size: 1.4rem;
     color: #666666;
 }
-
+/*
 .resource-list li div {
     height: 100%;
-}
+}*/
 
+/*
 .resource-list img {
     width: 30%;
     height: 80%;
     padding: 5px;
     border: 1px solid #12879A;
     background-color: #FFFFFF;
+}*/
+
+.my-upload-list .img-thumb-list {
+    width: 130px;
+    height: 130px;
+    left: 39px;
 }
 
-.my-upload-list img {
-    float: left;
-    width: 40%;
-}
 
 .my-upload-list .resource-title {
     float: left;
-    width: 40%;
+    width: 35%;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    margin-left: 165px;
+}
+
+.my-upload-list .check-box-area {
+    float: left;
 }
 
 .resource-list li.active {
@@ -251,7 +276,11 @@
     padding-bottom: 20px;
 }
 
-.resource-title, .resource-type, .resource-date{
+.resource-title, {
+    margin-left: 170px;
+}
+
+.resource-type, .resource-date{
     margin-left: 20px;
 }
 
@@ -320,7 +349,7 @@
 }
 
 .edit-list-left {
-    width: 12%;
+    width: 15%;
     float: left;
 }
 
