--- a/src/coms/res-preview/views/comment.html
+++ b/src/coms/res-preview/views/comment.html
@@ -6,7 +6,7 @@
 		</div>
 		<textarea ng-change="changeComment()" ng-model="VM.inputComment"></textarea>
 		<span class="comment-text"><span class="shen">{{commentNum}}</span>/200</span>
-		<button class="btn btn-success publish" ng-click="publishComment()">发表</button>
+		<button class="btn btn-success publish" ng-disabled="VM.comShow" ng-click="publishComment()">发表</button>
 	</div>
 
 	<div class="conment-list">
@@ -52,14 +52,14 @@
 
 <div class="bottom-fixed">
 	<div class="fix-inner">
-		<span class="comment-star">
+		<span class="comment-star" ng-hide="VM.comShow">
 				<i class="icon-star" ng-repeat="star in showStar" ng-class="{'starLight':curStar[$index],'starHover':hoverStar[$index]}" ng-mouseover="mouseOverStar($index)" ng-mouseout="mouseOutStar($index)" ng-click="starClick($index)"></i>
 		</span>
 		<span class="comment-count">已有{{VM.info.userNum}}人评分,平均分{{VM.info.avgScore}}</span>
 		<span>下载次数:{{VM.info.dloadTimes}}</span>
 		<span>浏览次数:{{VM.info.clickTimes}}</span>
 
-		<button class="btn btn-danger" ng-click="addToCurrentPrepare('btn')" ng-mouseover="showPre()" ng-mouseout="hidePre()">加入备课夹</button>
+		<button class="btn btn-danger" ng-click="addToCurrentPrepare('btn')" ng-mouseover="showPre()" ng-mouseout="hidePre()" ng-disabled="VM.preShow">加入备课夹</button>
 		<span class="down-orign" ng-click="resDownload(VM.resourceId)">下载到本地</span>
 		<ul class="prepareList" ng-show="VM.showPre" ng-mouseover="showPre()" ng-mouseout="hidePre()">
 			<li ng-repeat="item in prepareList track by $index"  class="text-ellipsis" ng-class="curPre?'curPre':''" ng-click="addToCurrentPrepare('list',item.id)">{{$index+1}}、{{item.title}}</li>
