--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -206,6 +206,7 @@
 {
     margin-top: 0px;
     width: 100% !important;
+    min-height: 700px;
 }
 #preview-container .slide_head .type_box{
     height: 30px;
