个人中心样式

--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -235,9 +235,15 @@
 }*/
 
 .my-upload-list .img-thumb-list {
-    width: 130px;
-    height: 130px;
+    width: 120px;
+    height: 120px;
     left: 39px;
+    line-height: 120px;
+}
+.my-upload-list .res-list-thumb {
+    width: 110px;
+    height: 110px;
+    line-height: 110px;
 }
 
 
@@ -247,7 +253,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    margin-left: 165px;
+    margin-left: 142px;
 }
 
 .my-upload-list .check-box-area {
