--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -21,7 +21,7 @@ upload-network-content
     min-height: 300px;
 }
 .upload-modal .edit-upload-res{
-    padding: 15px;
+    padding: 15px 40px;
 }
 .upload-modal .edit-upload-res table{
     width: 70%;
@@ -34,6 +34,7 @@ upload-network-content
     color: #DF3D6D;
     font-size: 22px;
     padding: 0 3px;
+    line-height: 25px;
 }
 .upload-footer{
     text-align: center;
@@ -69,4 +70,27 @@ upload-network-content
 }
 .upload-modal-body li > img{
     width: 175px;
+}
+.upload-modal-body .edit-list{
+    padding: 6px 8px;
+}
+.upload-all,.upload-onebyone{
+    cursor: pointer;
+    margin-right: 15px;
+}
+.add-active{
+    background: #E4F3F7;
+    border: 1px solid  #89D3DB;
+    border-bottom: none;
+    padding: 3px 5px;
+}
+.upload-modal .edit-detail-box{
+    background: #E4F3F7;
+    padding-top: 20px;
+}
+.upload-modal .edit-list-left{
+    width: 13%;
+}
+.des-editor{
+    width: 500px;
 }
