--- a/src/coms/personal-center/views/upload-modal.html
+++ b/src/coms/personal-center/views/upload-modal.html
@@ -95,35 +95,127 @@
 		<div class="modal-prepare-header">上传资源</div>
 		<div class="edit-upload-res">
 			<div class="row">
-				<div class="col-sm-2">上传资源列表</div>
+				<div class="col-sm-3">上传资源列表：</div>
 				<table class="col-sm-9 table table-striped table-hover table-bordered">
 					<tr>
 						<td>序号</td>
 						<td>资源名称</td>
 					</tr>
-					<tr>
-						<td>01</td>
-						<td>sdfsdaf.jpg</td>
+					<tr ng-repeat="v in files track by $index">
+						<td>{{ $index +1 }}</td>
+						<td>{{v.name}}</td>
 					</tr>
 				</table>
 			</div>
-			<div class="res-info-list">
-				<div class=""><span class="red-tip">*</span>资源名称：<input id="resName" ng-model="VM.resName" /></div>
-				<div class="">
-					<div class="unifyType-title"><span class="red-tip">*</span>资源类型：</div>
-					<span class="unifyType" ng-repeat="v in unifyType"> {{v.mtype}} </span>
-				</div>
-				<div class=""><span class="red-tip">*</span>上传至：</div>
-				<div class=""><span class="red-tip">*</span>共享范围：</div>
-				<div class=""><span class="red-tip">*</span>关键词：</div>
-				<div class=""><span class="red-tip">*</span>资源介绍：
-					<textarea>
-						
-					</textarea>
-				</div>
-			</div>
+			<span class="upload-all" ng-class="addAll? 'add-active':''" ng-click="addAll=true">方式一： 为资源添加统一的信息</span>
+			<span class="upload-onebyone" ng-class="!addAll? 'add-active':''" ng-click="addAll=false">方式二： 为每个资源单独添加信息</span>
+			
+			<div class="edit-detail-box" ng-repeat="v in files track by $index">
+    		<div class="edit-list" ng-show="!addAll">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">资源名称</span>
+    			<input type="text" ng-model="v.title" />
+    			<!--<button class="btn-op" ng-click="setResTitle(res.title)">确定</button>-->
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">资源类型</span>
+    			<span class="tag" ng-repeat="v in unifyType"> {{ v.mtype }}</span>
+    		</div>
+    		<div class="edit-list">
+    			<div class="edit-list-left">
+    				<span class="red-tip">*</span>
+    				<span class="sp-label">上传至：</span>
+    			</div>
+    			
+    			<div class="edit-list-right">
+    				<div class="select-loc-box">
+		    			<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger">
+									<span class="select-current" href="" ng-bind="VM.currentGrade"></span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)"><span ng-bind="grade.name"></span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger">
+									<span class="select-current">{{VM.currentSubject.name}}</span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)"><span>{{ subject.name }}</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger" ng-click="closeCurrentVersion()">
+									<span class="select-current" href="">{{VM.currentVersion.name}}</span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="version in VM.version track by $index" ng-class="VM.currentVersionSeclet[$index]?'selected':''" ng-click="VM.selectVersion($index)"><span>{{ version.name }}</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="select-nav-item">
+							<div class="menu-drop">
+								<div class="trigger" ng-click="closeCurrentMaterial()">
+									<span class="select-current" href="">{{VM.currentMaterial.name}}</span>
+									<i class="icon-angle-down"></i>
+									<i class="icon-angle-up"></i>
+								</div>
+								<div class="menu-drop-main">
+									<ul class="menu-drop-list">
+										<li ng-repeat="material in VM.material track by $index" ng-class="VM.currentMaterialSeclet[$index]?'selected':''" ng-click="VM.selectMaterial($index)"><span>{{ material.name }}</span></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="clearfix"></div>
+    				</div>
+
+    			</div>
+    			<div class="clearfix"></div>
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">共享范围</span>
+    			<span class="tag active">仅自己可见</span>
+    			<span class="tag">本校可见</span>
+    			<span class="tag">本区可见</span>
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">关键词</span>
+    			<input type="text" ng-model="res.keywords" class="keyword-input" placeholder="多个关键词用空格隔开" />
+    		</div>
+    		<div class="edit-list">
+    			<span class="red-tip">*</span>
+    			<span class="sp-label">资源介绍</span>
+    			<textarea class="des-editor" ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字">
+    			</textarea>
+    			<!--<span class="sp-count-word"><span ng-model="res.description.length"></span>/200</span>-->
+    		</div>
+    	</div>
 			<div class="upload-footer">
-				<button class="btn btn-lg btn-success btn-custom-modal" ng-click="uploadResInfo()">确定</button>
+				<button class="btn btn-lg btn-success btn-custom-modal" ng-click="uploadEditResInfo()">确定</button>
 				<button class="btn btn-lg btn-success btn-custom-modal">取消</button>
 			</div>
 		</div>
