--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -198,15 +198,15 @@
 }
 .prepare-all-list{
     background: #fff;
-    margin: 10px 0 30px 0;
+    margin: 10px 0 50px 0;
 }
 .prepare-all-header-img{
-    margin-top: -15px;
-    width: 50px;
+    margin-top: -33px;
+    margin-left: -13px;
 }
-.prepare-gallery{
-    margin: 10px
-}
+
+
+
 .list-all-item{
     display: inline-block;
     margin:5px 0;
@@ -353,3 +353,43 @@
     border-bottom: 2px solid #219b81;
     cursor: pointer;
 }
+
+//备课夹列表页
+.prepare-gallery{
+    margin: 10px;
+    position: relative;
+    padding-bottom: 30px;
+
+    .left-arrow, .right-arrow {
+        width: 5%;
+    }
+
+    .list-box {
+        width: 90%;
+        margin: auto;
+    }
+
+    .list-all-item {
+        padding: 0 0;
+        text-align: center;
+        border: 1px solid #CCCCCC;
+        margin-right: 20px;
+    }
+
+    .prepare-all-item-img {
+        width: 80%;
+        height: 150px;
+        display: block;
+        margin: 15px auto;
+    }
+
+    .list-all-title {
+        margin: 10px;
+    }
+
+    .icon-play-circle, .icon-trash {
+        color: #3fbbcf;
+        font-size: 20px;
+    }
+}
+
