--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -71,6 +71,7 @@
     margin:10px auto;
     width:91%;
     cursor: pointer;
+    text-align: left;
 }
 #customres-container .prepare-all-item-img
 {
@@ -80,19 +81,24 @@
   
     padding: 0px;
     margin-bottom: 20px;
+   margin-right: 0px;
+   border: none;
 }
 #customres-container .subject_box .item_inner
 {
-    border: 1px solid #ccc;
-    width: 96%;
-    margin: 0px 2%;
+    width: 92%;
+    margin: 0px 4%;
     padding: 10px;
+    border: 1px solid #ccc;
     
 }
 #customres-container .subject_box .item_inner img{
     margin:0 auto;
     display: block;
-    width:90%;
+    max-width:90%;
+    max-height: 150px;
+    height: auto;
+    width: auto;
 }
 #customres-container .subject_box .item_inner:hover
 {
