--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -502,6 +502,7 @@
     height: 30px;
     line-height: 30px;
    
+   
 }
 .com-list li{
     min-height: 120px !important;
@@ -512,6 +513,7 @@
 .com-list .person-thumb
 {
     width: 100%;
+    cursor: pointer;
 }
 .com-list .com-content
 {
