--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -36,67 +36,33 @@
 
 	<div class="subject_box">
 		
-		<div class="prepare-all-list">
+		<div class="prepare-all-list" ng-repeat="subject in VM.resource">
 			<div class="prepare-all-header">
 				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
-				<span class="subject">数学</span>
+				<span class="subject">{{subject.subject}}</span>
 				<div class="coms-pagination">
-					<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;"></uib-pagination>
+					<uib-pagination total-items="VM.bigTotalItems[$index]" ng-model="VM.bigCurrentPage[$index]" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;" ng-change="pageChanged($index)"></uib-pagination>
 					<div class="page-go">
-						<span class="page-text">转到</span>
-						<input class="page-input" />
+						<span class="page-text" ng-click="pageChanged($index,VM.pageTo[$index])">转到</span>
+						<input class="page-input" ng-model="VM.pageTo[$index]"/>
 						<span class="page-go-btn">Go</span>
 					</div>
 				</div>
 			</div>
 			<div class="prepare-gallery row">
-				<div class="list-all-item col-md-3">
+				<div class="list-all-item col-md-3" ng-repeat="item in subject.item">
 					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
+						<img class="prepare-all-item-img" ng-src="item.thumbnailpath" fallback-src="assets/img/sample.png" ui-sref="previewres({resId:item.id,curTfcode:'',fromFlag:VM.fromFlag,search:'person',type:0})"/>
+						<div class="list-all-title text-ellipsis" ui-sref="previewres({resId:item.id,curTfcode:'',fromFlag:VM.fromFlag,search:'person',type:0})">{{item.mtype}}：{{item.title}}</div>
 						<div class="btnBox">
-							<span class="download">立即下载</span>
+							<span class="download" ng-click="resDownload(item.id)">立即下载</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		
-		<div class="prepare-all-list">
-			<div class="prepare-all-header">
-				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
-				<span class="subject">物理</span>
-				<div class="coms-pagination">
-					<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;"></uib-pagination>
-					<div class="page-go">
-						<span class="page-text">转到</span>
-						<input class="page-input" />
-						<span class="page-go-btn">Go</span>
-					</div>
-				</div>
-			</div>
-			<div class="prepare-gallery row">
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-						</div>
-					</div>
-				</div>
-				<div class="list-all-item col-md-3">
-					<div class="item_inner">
-						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
-						<div class="list-all-title">动画：荷塘月色</div>
-						<div class="btnBox">
-							<span class="download">立即下载</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
+	
 		
 		
 		
