--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -2,10 +2,16 @@
     padding: 10px 10px;
     height: 100%;
 }
-
+.nav-item-select{
+    background: #fff;
+    min-height: 500px;
+}
+.nav-item-select ul{
+    
+}
 .cen-info {
     text-align: center;
-    padding: 10px 10px;
+    padding-bottom: 0;
     background-color: #FFFFFF;
 }
 
@@ -22,14 +28,15 @@
 }
 
 .user-info i {
-    margin: 0 10px;
     font-style: normal;
 }
 
 .user-info-icon {
     margin: 0 10px;
 }
-
+.user-info-custom{
+    margin-bottom: 0;
+}
 .btn-pink {
     background-color: #EC80AF;
     line-height: 35px;
@@ -38,6 +45,7 @@
 .op-op-btn-group {
     background-color: #FFFFFF;
     padding: 10px 10px;
+    padding-top: 0;
     width: 100%;
 }
 
@@ -48,7 +56,7 @@
 }
 
 .op-btn-group ul button {
-    width: 100%;
+    width: 80%;
     height: 50px;
     font-size: 2rem;
     letter-spacing: 2px;
