--- a/src/less/header.less
+++ b/src/less/header.less
@@ -61,6 +61,7 @@
     line-height: 49px;
     text-align: center;
     padding: 2px;
+    cursor: pointer;
 }
 #header .main-nav li:first-child{
     margin-left: 0;
