--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -58,7 +58,7 @@
 		<div class="res-intro">
 			<div class="intro-banner">资源简介</div>
 			<div class="intro-info">
-				<span class="intro-title">《{{VM.info.title}}》</span>
+				<span class="intro-title">{{VM.info.title}}</span>
 				<span class="intro-type">类型：{{VM.info.mtype}}</span>
 				<res-size class="intro-size" data-value="{{ VM.info.fSize }}"></res-size>
 			</div>
