--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -5,10 +5,10 @@
     background: #fff;
    
     margin-top: 30px;
+    margin-bottom: 50px;
 }
 #customres-container .custom_types .thumbnail{
     border: none;
-    
 }
 #customres-container .type_name
 {
@@ -16,7 +16,6 @@
     font-size: @navFontSize;
     width: 55%;
     margin: 15px auto;
-   
 }
 #customres-container .type_des
 {
