--- a/src/coms/res-area/views/area-content.html
+++ b/src/coms/res-area/views/area-content.html
@@ -47,6 +47,7 @@
 				</span>
 			</li>
 		</ul>
+		<div class="noDataCtrl">当前选择下还没有资源哦</div>
 		<ul class="res-ul-thubmlist" ng-show="!isList">
 			<li class="res-thubmlist-item col-md-4" ng-repeat="list in resList.list track by $index"  ng-init="parentIndex = $index">
 				<input class="res-checkbox" type="checkbox">
