--- a/src/less/res.less
+++ b/src/less/res.less
@@ -272,6 +272,16 @@
     background: @color5;
     color: #fff;
 }
+.catalog-tip{
+    position: relative;
+}
+.catalog-text{
+    position: absolute;
+    left: 50px;
+    top: 50px;
+    color: #fff;
+    font-size: 20px;
+}
 
 .res-header-type{
     margin: 20px;
