--- a/src/coms/personal-center/views/my-comment.html
+++ b/src/coms/personal-center/views/my-comment.html
@@ -15,6 +15,8 @@
 	</div>
 	<div class="resource-box">
 		<div class="resource-list com-list">
+		 <div class="loading" ng-show="isLoading"><i class="icon-spinner icon-spin icon-3x"></i></div>
+
 			<ul class="row">
 				<li ng-repeat="list in VM.commentList" class="comment-list">
 					<div class="col-md-12 col-sm-12">
