--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -40,14 +40,14 @@
 			<div class="prepare-all-header">
 				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
 				<span class="subject">{{subject.subject}}</span>
-				<div class="coms-pagination">
+				<!--<div class="coms-pagination">
 					<uib-pagination total-items="VM.bigTotalItems[$index]" ng-model="VM.bigCurrentPage[$index]" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;" ng-change="pageChanged($index)"></uib-pagination>
 					<div class="page-go">
 						<span class="page-text" ng-click="pageChanged($index,VM.pageTo[$index])">转到</span>
 						<input class="page-input" ng-model="VM.pageTo[$index]"/>
 						<span class="page-go-btn">Go</span>
 					</div>
-				</div>
+				</div>-->
 			</div>
 			<div class="prepare-gallery row">
 				<div class="list-all-item col-md-3" ng-repeat="item in subject.item">
