--- a/src/less/message.less
+++ b/src/less/message.less
@@ -34,6 +34,7 @@
 #message-container .glyphicon-trash{
     margin-right: 5px;
     font-size: 15px;
+    line-height: 60px;
    
 }
 #message-container .mes_list
