--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -39,7 +39,7 @@
 		<div class="prepare-all-list" ng-repeat="subject in VM.resource">
 			<div class="prepare-all-header">
 				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
-				<span class="subject">{{subject.subject}}</span>
+				<span class="subject">{{subject.subject.name}}</span>
 				<!--<div class="coms-pagination">
 					<uib-pagination total-items="VM.bigTotalItems[$index]" ng-model="VM.bigCurrentPage[$index]" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;" ng-change="pageChanged($index)"></uib-pagination>
 					<div class="page-go">
@@ -50,12 +50,15 @@
 				</div>-->
 			</div>
 			<div class="prepare-gallery row">
-				<div class="list-all-item col-md-3" ng-repeat="item in subject.item">
+				<div class="list-all-item col-md-3" ng-repeat="item in subject.list">
 					<div class="item_inner">
-						<img class="prepare-all-item-img" ng-src="item.thumbnailpath" fallback-src="assets/img/sample.png" ui-sref="previewres({resId:item.id,curTfcode:'',fromFlag:VM.fromFlag,search:'person',type:0})"/>
-						<div class="list-all-title text-ellipsis" ui-sref="previewres({resId:item.id,curTfcode:'',fromFlag:VM.fromFlag,search:'person',type:0})">{{item.mtype}}：{{item.title}}</div>
+						<div class="img-thumb">
+						  <img class="res-list-thumb" ng-src="{{item.imgPath}}" fallback-src="assets/img/sample.png" ui-sref="previewres({resId:item.resId,curTfcode:'',fromFlag:VM.fromFlag,search:'person',type:0})"/>
+
+						</div>
+						<div class="list-all-title text-ellipsis" ui-sref="previewres({resId:item.resId,curTfcode:'',fromFlag:VM.fromFlag,search:'person',type:0})">{{item.unifyType}}：{{item.title}}</div>
 						<div class="btnBox">
-							<span class="download" ng-click="resDownload(item.id)">立即下载</span>
+							<span class="download" ng-click="resDownload(item.resId)">立即下载</span>
 						</div>
 					</div>
 				</div>
