--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -205,13 +205,6 @@
     margin-left: -13px;
 }
 
-
-
-.list-all-item{
-    display: inline-block;
-    margin:5px 0;
-    padding:10px;
-}
 .list-all-item:hover{
     background: @color4;
 }
@@ -370,10 +363,12 @@
     }
 
     .list-all-item {
-        padding: 0 0;
         text-align: center;
         border: 1px solid #CCCCCC;
-        margin-right: 20px;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        cursor: pointer;
+       
     }
 
     .prepare-all-item-img {
