--- a/src/coms/prepare/views/prepare-content-list.html
+++ b/src/coms/prepare/views/prepare-content-list.html
@@ -6,40 +6,26 @@
 		</span>
 	</div>
 	<div class="clearfix"></div>
-	<div class="prepare-all-list" ng-repeat="list in listData track by $index">
+	<!--<div class="prepare-all-list" ng-repeat="list in listAllData | filter:{timeLabel:'withinweek'}">-->
+	<div class="prepare-all-list">
 		<div class="prepare-all-header">
 			<img class="prepare-all-header-img" src="assets/img/prepare/prepare-list.png" />
-			<span>{{list.date}}</span>
-			<div class="coms-pagination">
-			 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;"></uib-pagination>
-				<div class="page-go">
-					<span class="page-text">转到</span>
-					<input class="page-input"/>
-					<span class="page-go-btn">Go</span>
-				</div>
-			</div> 
+			<span>{{listAllData[0].timeLabel =="withinweek"? "一周内":""}}</span>
 		</div>
-		<div class="prepare-gallery row">
-			<div class="left-arrow">
-				<span></span><i ng-click="pre()" class="icon-chevron-left"></i>
-			</div>
-			<!--<span class="leftbtn icon-angle"><i class="icon-angle-left"></i></span>-->
-			<div class="list-box">
-				<div class="list-all-item col-md-3"  ng-repeat="item in list.children">
-					<div class="list-all-title">{{$index+1}}、{{list.title}}</div>
-					<img class="prepare-all-item-img" ng-src="{{item.imgPath}}" fallback-src="assets/img/title.jpg" />
-					<span class="zip-download"><i class="icon-cloud-download"></i> 打包下载</span>
-					<span class="online-course"><i class="icon-play-circle"></i></span>
-					<i class="icon-trash"></i>
-					<br></br>
+		<div class="prepare-gallery" >
+			<div class="list-box row">
+				<div class="col-md-3" ng-repeat="list in listAllData | filter:{timeLabel:'withinweek'}">
+					<div class="list-all-item ">
+						<div class="list-all-title">{{$index+1}}、{{list.title}}</div>
+						<img class="prepare-all-item-img" ng-src="{{list.imgPath?list.imgPath:'null'}}" fallback-src="assets/img/title.jpg" />
+						<span class="zip-download"><i class="icon-cloud-download"></i> 打包下载</span>
+						<span class="online-course"  ui-sref="onlineres({prepareId: list.id})"><i class="icon-play-circle"></i></span>
+						<i class="icon-trash" ng-click="deletePrepare2($index,$event)"></i>
+						<br>
+					</div>
 				</div>
 				<div class="clearfix"></div>
 			</div>
-			<div class="right-arrow">
-				<span></span>
-				<i ng-click="next()" class="icon-chevron-right"></i>
-			</div>
-			<!--<span class="rightbtn icon-angle"><i class="icon-angle-right"></i></span>-->
 		</div>
 		<div class="clearfix"></div>
 		
