--- a/src/coms/res-area/views/areares.html
+++ b/src/coms/res-area/views/areares.html
@@ -5,10 +5,12 @@
 	<div class="col-md-3 catalog">
 		<div class="catalog-header"></div>
 		<div class="catalog-content">
-			<div class="catalog-tip"><img src="assets/img/catalog/catalog-tip.png"></div>
+			<div class="catalog-tip">
+				<img src="assets/img/catalog/catalog-tip.png">
+				<div class="catalog-text">{{currentVersion.name == '课标版'?'课标导航':'章节目录'}}</div>
+			</div>
 			<div class="catalog-tree" data-ng-include="'/coms/tree/views/tree.html'"></div>
 		</div>
-		
 	</div>
 	<!--右侧资源列表-->
 	<div class="col-md-9" data-ng-include="'/coms/res-area/views/area-content.html'"></div>
@@ -22,7 +24,8 @@
 		</div>
 		<div class="prepare-ctrls">
 			<div class="ctrls-prepare-list" >
-				<div class="ctrls-prepare-list-item" ng-repeat="item in prepareList track by $index" >{{item.title}}</div>
+				<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index" >{{$index+1}}、{{item.title}}</div>
+				<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>
 			</div>
 		</div>
 	</div>
