备课夹修改

--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -326,6 +326,7 @@
 }
 #preview-container .fix-inner .prepareList li{
     cursor: pointer;
+    text-align: left;
     
 }
 #preview-container .curPre
