--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -69,7 +69,7 @@
 	
 	</div>
 	<!-- 备课夹悬浮  -->
-	<div class="prepare-fixed" ng-hide="VM.preShow">
+	<div class="prepare-fixed" >
 		<div class="prepare-shop" ui-sref="prepare">
 			<img src="assets/img/shopcart.png"/>
 			<span class="shop-count">{{ shopCount }}</span>
