--- a/src/less/res.less
+++ b/src/less/res.less
@@ -484,6 +484,9 @@
     text-decoration: underline;
     color: #0094CE;
 }
+.res-prepare-list-more{
+    color: #3fbbcf;
+}
 .res-prepare-thumb{
     bottom: 40px;
     width: 100%;
