--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -46,6 +46,7 @@
 						<div class="res-prepare-list">
 							<div class="res-prepare-list-item addPrepareInner" ng-repeat="item in prepareList track by $index"  ng-click="addToPrepare($event, parentIndex, $index)">{{$index+1}}、{{item.title}}</div>
 							<div class="res-prepare-list-item" ng-show="prepareList.length == 0">当前目录节点下还没有备课夹，点击加入备课夹，会默认创建</div>
+							<div class="res-prepare-list-item res-prepare-list-more" ng-hide="prepareList.length == 0">更多备课夹...</div>
 						</div>
 					</div>
 					<br>
@@ -80,6 +81,7 @@
 						<div class="res-prepare-thumb" >
 							<div class="res-prepare-list-item addPrepareInner" ng-repeat="item in prepareList track by $index" ng-click="addToPrepare($event, parentIndex, $index)">{{$index+1}}、{{item.title}}</div>
 							<div class="res-prepare-list-item" ng-show="prepareList.length == 0">当前目录节点下还没有备课夹，点击加入备课夹，会默认创建</div>
+							<div class="res-prepare-list-item" ng-hide="prepareList.length == 0">更多...</div>
 						</div>
 					</div>
 				</div>
