fix prepare systemres

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -371,10 +371,11 @@
 }
 .res-thubmlist-info{
     font-size: 13px;
-    margin-top: 200px;
+    margin-top: 210px;
 }
 .res-thubmlist-info label{
     margin: 5px 0;
+    margin-left: 2px;
 }
 .res-thubmlist-info .res-title{
     width: 90%;
@@ -409,7 +410,7 @@
 .res-star i{
     color: #dea618;
     font-size: 16px;
-    margin-left: 5px;
+    margin-right: 5px;
 }
 .res-list-tools{
     float: right;
@@ -427,7 +428,7 @@
 .res-download{
     font-size: 15px;
     color:@color5;
-    margin-left: 10px;
+    margin-left: 2px;
     margin-top: 5px;
     cursor: pointer;
 }
@@ -453,9 +454,8 @@
     background: #e6f4f4;
 }
 .res-thubmlist-tools .res-select{
-    padding: 6px 10px;
-    margin-right: 0;
-    margin-left: 10px;
+    padding: 2px 10px;
+    margin-left: 20px;
     cursor: pointer;
 }
 .noDataCtrl{
@@ -504,7 +504,6 @@
     width: 100px;
     float: left;
     height: 40px;
-    padding: 0 6px !important;
     margin-top: 5px;
     position: relative;
 }
